--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,9 +10,9 @@ import logo from '../../public/assets/logo.png';
     </div>
     <div class="column-2">
       <h3>NAV</h3>
-      <a href="/">HOME</a>
-      <a href="/aboutme">ABOUT ME</a>
-      <a href="/contactinfo">CONTACT INFO</a>
+      <a href="/">Home</a>
+      <a href="/aboutme">About Me</a>
+      <a href="/contactinfo">Contact Info</a>
     </div>
     <div class="column-3">
       <h3>FOLLOW</h3>
