update img location

--- a/src/components/Clientele.astro
+++ b/src/components/Clientele.astro
@@ -1,8 +1,8 @@
 ---
-import wallaceseeds from '../../public/assets/projects/wallaceseeds.png';
-import leppsff from '../../public/assets/projects/leppsff.webp';
-import moundservices from '../../public/assets/projects/moundservices.png';
-import pmgolfcourse from '../../public/assets/projects/golfcourse.png'
+import wallaceseeds from '../assets/projects/wallaceseeds.png';
+import leppsff from '../assets/projects/leppsff.webp';
+import moundservices from '../assets/projects/moundservices.png';
+import pmgolfcourse from '../assets/projects/golfcourse.png'
 ---
 
 <div class="container">
