--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 // Image Imports
-import image from '../../public/assets/header.png'
+import image from '../assets/header.png'
 ---
 
 <div class="row">
