--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,11 @@
+---
+import logo from '../assets/logo.png'
+---
+
 <nav>
   <div class="logo">
-    <img src="../../../assets/logo.png" alt="">
+    <img src={logo} alt="nathan mclaren web design logo" />
+    <!-- <img src="../../../assets/logo.png" alt=""> -->
   </div>
   <div class="links">
     <a href="/">HOME</a>
