--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import logo from '../../public/assets/logo.png';
+import logo from '../assets/logo.png';
 ---
 
 <footer>
@@ -41,7 +41,7 @@ footer {
 .column-1 {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
 
   width: 33%;
