added clientele and call to action components

--- a/src/components/Clientele.astro
+++ b/src/components/Clientele.astro
@@ -6,13 +6,12 @@ import pmgolfcourse from '../assets/projects/golfcourse.png'
 ---
 
 <div class="container">
-  <h1>Clientele</h1>
+  <h1>Recent Projects</h1>
   <div class="logos">
     <a href="https://www.wallaceseeds.ca"><img src={wallaceseeds} alt="wallace seeds logo"></a>
     <a href="https://pilotmoundgolfcourse.ca/"><img src={pmgolfcourse} alt="pilot mound golf course logo"></a>
     <a href="https://leppsfamilyfarm.netlify.app/"><img src={leppsff} alt="lepps family farm logo"></a>
     <a href="https://moundservices.com/"><img src={moundservices} alt="lepps family farm logo"></a>
-
   </div>
 </div>
 
@@ -23,9 +22,13 @@ import pmgolfcourse from '../assets/projects/golfcourse.png'
   justify-content: center;
   align-items: center;
   background: black;
-  border-radius: 5rem;
+  border-radius: 10rem;
 
   padding: 2rem;
+}
+
+.container h1 {
+  padding-bottom: 2rem;
 }
 
 .logos {
