--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,8 +4,7 @@ import logo from '../assets/logo.png'
 
 <nav>
   <div class="logo">
-    <img src={logo} alt="nathan mclaren web design logo" />
-    <!-- <img src="../../../assets/logo.png" alt=""> -->
+    <a href="/"><img src={logo} alt="nathan mclaren web design logo" /></a>
   </div>
   <div class="links">
     <a href="/">HOME</a>
@@ -40,7 +39,7 @@ nav {
 }
 
 .logo img {
-  width: 2rem;
+  width: 5rem;
 }
 
 .links a {
