--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,17 @@
 ---
 // Layout Imports
 import MainLayout from '../layouts/MainLayout.astro';
+
 import Header from '../components/Header.astro';
 import Clientele from '../components/Clientele.astro';
+import Stats from '../components/Stats.astro';
+import CallToAction from '../components/CallToAction.astro'
 ---
 
 <MainLayout title="Nathan McLaren Web Design">
   <Header />
   <Clientele />
+  <Stats />
+  <CallToAction />
 </MainLayout>  
 
