--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -21,9 +21,19 @@
 .container div {
   background:    #000;
   color: #fff;
-  border-radius: 2rem;
-  padding:       20px 45px;
-  text-align:    center;
+  border-radius: 5rem;
+  padding: 20px 45px;
+  text-align: center;
   margin: 3rem;
+}
+
+.container a {
+  text-decoration: none;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 75px;
+  letter-spacing: -0.04em;
+
+  color: #E5E5E5;
 }
 </style>
