--- a/src/components/Clientele.astro
+++ b/src/components/Clientele.astro
@@ -36,11 +36,18 @@ import pmgolfcourse from '../assets/projects/golfcourse.png'
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .logos img {
   max-width: 100%;
   height: 5rem;
   padding: 0 1rem
+}
+
+@media screen and (max-width: 790px) {
+  .container {
+    border-radius: 0;
+  }
 }
 </style>
