--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -81,4 +81,18 @@
   align-items: flex-start;
   padding: 0.5rem 0;
 }
+
+@media screen and (max-width: 750px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .column-1, .column-2 {
+    width: 100%;
+  }
+
+  .column-1 h1 {
+    padding: 0;
+  }
+}
 </style>
